--- a/frontend/holidays.html
+++ b/frontend/holidays.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/admin.css">
-    <script defer src="js/holidays.js"></script> <!-- Archivo JavaScript para gestionar el ABM de feriados -->
-</head>
+    <script type="module" src="js/holidays.js"></script>
 <body>
     <header>
         <a href="index.html" class="app-logo-link">
