RNM imágenes + 4to piso

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -548,10 +548,26 @@
                 <tr>
                     <td class="work-site">Imágenes 4to piso Largo</td>
                     <td class="droppable"><select id="imagenes-4to-piso-monday-long"></select></td>
-                    <td class="droppable"><select id="imagenes-4to-piso-tuesday-long"></select></td>
+                    <td class="droppable"><select id="imagenes-4to-piso-tuesday-long"disabled></select></td>
                     <td class="droppable"><select id="imagenes-4to-piso-wednesday-long"></select></td>
                     <td class="droppable"><select id="imagenes-4to-piso-thursday-long"></select></td>
                     <td class="droppable"><select id="imagenes-4to-piso-friday-long" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes RNM + 4to piso Matutino</td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-tuesday-short"></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes RNM + 4to piso Largo</td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="imagenes-rnm-4to-piso-friday-long" disabled></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
