--- a/frontend/holidayAssistant.html
+++ b/frontend/holidayAssistant.html
@@ -22,7 +22,19 @@
             <label for="year-filter">Seleccionar Año:</label>
             <select id="year-filter"></select>
         </div>
-
+        <h2>Conteo de Feriados Largos por Usuario</h2>
+        <table id="user-holiday-count-table">
+            <thead>
+                <tr>
+                    <th>Usuario</th> <!-- Los años se llenarán dinámicamente -->
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Filas generadas dinámicamente -->
+            </tbody>
+        </table>
+        
+        <h2>Asistente propiamente dicho</h2>
         <button id="assign-holidays">Asignar Automáticamente</button>
 
         <table id="holiday-table">
