--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,7 @@
         <button onclick="showSection('programacion')">Plantas</button>
         <button onclick="showSection('guardias')">Guardias</button>
         <button onclick="showSection('vacaciones')">Vacaciones</button>
+        <button onclick="showSection('findeslargos')">Findes largos</button>
         <button onclick="showSection('facturacion')">Facturación y Nomenclado</button>
         <button onclick="showSection('liquidaciones')">Liquidaciones e Ingresos</button>
         <button onclick="showSection('reuniones')">Reuniones y Estatuto</button>
@@ -67,12 +68,16 @@
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button> -->
         </section>
         <section id="guardias" class="content-section">
-            <h3>Tus fines de semana largos de este año son:</h3>
-            <div id="holiday-assignments"></div>
             <h3>Tus guardias para este mes son:</h3>
             <div id="shifts-assignments"></div>
             <a href="shiftInform.html"><button>Informe de guardias</button></a>
             <a href="shiftSchedule.html"><button>Asistente de programación de guardias</button></a>
+        </section>
+        <section id="findeslargos" class="content-section">
+            <h3>Tus fines de semana largos de este año son:</h3>
+            <div id="holiday-assignments"></div>
+            <a href="holidayInform.html"><button>Informe de findes largos</button></a>
+            <a href="holidayAssistant.html"><button>Asistente de programación de findes largos</button></a>
         </section>
         <section id="vacaciones" class="content-section">
         <h3>Tus próximos períodos de vacaciones son:</h3>
