--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="google223fdf86692cd056.html" />
     <title>Login - Anestesiólogos del Valle</title>
     <link rel="icon" type="image/png" href="images/logo/logo64x64.png">
     <link rel="stylesheet" href="css/base.css">
