--- a/frontend/holidayAssistant.html
+++ b/frontend/holidayAssistant.html
@@ -28,7 +28,7 @@
         </div>
         <div class="instructions">
         <h2>Conteo de Feriados Largos por Usuario</h2>
-        <table id="user-holiday-count-table">
+        <table id="user-holiday-count-table" class="responsive-table">
             <thead>
                 <tr>
                     <th>Usuario</th> <!-- Los años se llenarán dinámicamente -->
@@ -42,7 +42,7 @@
         <h2>Asistente propiamente dicho</h2>
         <button id="assign-holidays" class="instructions-button">Asignar</button>
         <button id="print-holidays" class="instructions-button">Imprimir</button>
-        <table id="holiday-table">
+        <table id="holiday-table" class="responsive-table">
             <thead>
                 <tr>
                     <th>Feriado Largo</th>
