--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,6 @@
         <div class="dropdown-menu" id="dropdown-menu">
             <a href="profile.html">Mi perfil</a>
             <a href="admin.html">Administrador de perfiles</a>
-            <a href="holidays.html">Carga de feriados</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
         </div>
     </header>
@@ -74,6 +73,7 @@
         <section id="findeslargos" class="content-section">
             <h3>Tus fines de semana largos de este año son:</h3>
             <div id="holiday-assignments"></div>
+            <a href="holidays.html"><button>Carga de feriados</button></a>
             <a href="holidayInform.html"><button>Informe de findes largos</button></a>
             <a href="holidayAssistant.html"><button>Asistente de programación de findes largos</button></a>
         </section>
