--- a/frontend/login.html
+++ b/frontend/login.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
     <script defer src="js/forms.js"></script>
     <script src="js/spinner.js"></script>
