instructivo PAMI INDEX

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,7 @@
                     <li><a href="https://drive.google.com/file/d/1XdTVLBVaW1jjOYoqRfB3tI8XUWL78uMA/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI/NIVELES</a></li>
                 </ul>
                 <button onclick="openFile('https://drive.google.com/file/d/1CHoY7uylsThHS9jmab-kDymfBwcHS9Qw/view?usp=sharing')">Instructivo ISSN</button>
+                <button onclick="openFile('https://docs.google.com/document/d/1tup_lj98cJVTMsBzhkQG2tzGLM8yhKTWygaHY0T0dyY/edit?usp=sharing')">Instructivo PAMI</button>
                 <button onclick="openFile('https://drive.google.com/file/d/1TREExIbZmoKcOdS5RUwxX7f_tKjUK-J3/view?usp=drive_link')">Nomenclador por O.S</button>
             </fieldset>
             <fieldset>
