mejoras en la asignación de guardias y agregado de tabla de conteo de usuario por provincia y esquema en workschemesweek

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -613,7 +613,7 @@
                 </tr>
                 <tr>
                     <td class="work-site">Hospital Cipolletti Largo</td>
-                    <td class="droppable"><select id="hospital-cipolletti-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-cipolletti-monday-long" enabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-tuesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-wednesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-thursday-long" disabled></select></td>
