--- a/frontend/workSchemes.html
+++ b/frontend/workSchemes.html
@@ -37,6 +37,24 @@
             <!-- Las filas se generarán dinámicamente -->
         </tbody>
     </table>
+
+    <table id="province-schedule-table" border="1" class="summary-table">
+        <thead>
+            <tr>
+                <th class="work-site">Provincia y Esquema de Trabajo</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Las filas se generarán dinámicamente -->
+        </tbody>
+    </table>
+    
+    
     </div>  
     </main> 
 </body>
