--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
                 </ul>
                 <button onclick="openFile('https://drive.google.com/file/d/1CHoY7uylsThHS9jmab-kDymfBwcHS9Qw/view?usp=sharing')">Instructivo ISSN</button>
                 <button onclick="openFile('https://docs.google.com/document/d/1tup_lj98cJVTMsBzhkQG2tzGLM8yhKTWygaHY0T0dyY/edit?usp=sharing')">Instructivo PAMI</button>
-                <button onclick="openFile('https://drive.google.com/file/d/10BlganOlMONrRdXJ7jtgnynfmgX6H44U/view?usp=sharing')">O.S. Vigentes</button>
+                <button onclick="openFile('https://drive.google.com/file/d/10BlganOlMONrRdXJ7jtgnynfmgX6H44U/view?usp=sharing')">O.S. Vigentes 03/2025</button>
 
             </fieldset>
             <fieldset>
@@ -117,7 +117,7 @@
                 </ul>
                 <button onclick="openFile('https://docs.google.com/document/d/1Qi-4nLkx5JaC6ENG58FqGUWTfMmmB86n/edit?usp=drive_link&ouid=116849778907664010256&rtpof=true&sd=true')">Nomenclado sugerido</button>
                 <button onclick="openFile('https://docs.google.com/spreadsheets/d/1WNHtepKncBFxCfo9Fw4-aigd2GCFlQiYyw2Bu0NbKK4/edit?usp=sharing')">Débitos por O.S.</button>
-                <button onclick="openFile('https://drive.google.com/file/d/18HJxCOJoJg6GQ7KjP9CsBqYrUY3oFEZr/view?usp=sharing')">O.S. Vigentes</button>
+                <button onclick="openFile('https://drive.google.com/file/d/18HJxCOJoJg6GQ7KjP9CsBqYrUY3oFEZr/view?usp=sharing')">O.S. Vigentes 03/2025</button>
             </fieldset>
         </section>
         <section id="liquidaciones" class="content-section" style="display:none;">
