nvela y msalvarezza a full

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -624,7 +624,7 @@
                     <td class="droppable"><select id="hospital-allen-monday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-allen-tuesday-long"></select></td>
                     <td class="droppable"><select id="hospital-allen-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="hospital-allen-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-allen-thursday-long" enabled></select></td>
                     <td class="droppable"><select id="hospital-allen-friday-long" disabled></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
@@ -721,7 +721,7 @@
                     <td class="droppable"><select id="hospital-castro-rendon-monday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-castro-rendon-tuesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-castro-rendon-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="hospital-castro-rendon-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-castro-rendon-thursday-long" enabled></select></td>
                     <td class="droppable"><select id="hospital-castro-rendon-friday-long" disabled></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
