Agregado de tutorial calibración de bombas mindray

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,6 +141,7 @@
             <ul id="tutoriales-list" class="hidden" style="display:none;">
                 <li><a href="https://drive.google.com/file/d/1RnvQy77VVhoQojQVvyT9Rff27vpwcQ-b/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Subir archivos a datatech</a></li>
                 <li><a href="https://drive.google.com/file/d/1vJPaQgBMRb5Nk0XUaxQJhmnOgIrrh0Rq/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pedir hemoderivados</a></li>
+                <li><a href="https://drive.google.com/file/d/1M-TNicf5qQ0nTLHohgykRDlPNIZAlBFt/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Calibrar bombas Mindray</a></li>
                 <li><a href="https://drive.google.com/file/d/1aKbTZqYVo3EJNAyURRn9T9g_By7InhR_/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pasos a cumplimentar en caso de incidente</a></li>
             </ul>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1rHyyYz1Ceotfd47ZuikEYOEjeMizu8Oq/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Equipamiento propio</button>
