coi vespertino martes disabled

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -581,7 +581,7 @@
                 <tr>
                     <td class="work-site">COI Vespertino</td>
                     <td class="droppable"><select id="coi-monday-short"></select></td>
-                    <td class="droppable"><select id="coi-tuesday-short"></select></td>
+                    <td class="droppable"><select id="coi-tuesday-short" disabled></select></td>
                     <td class="droppable"><select id="coi-wednesday-short" disabled></select></td>
                     <td class="droppable"><select id="coi-thursday-short" disabled></select></td>
                     <td class="droppable"><select id="coi-friday-short" disabled></select></td>
