--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,6 +145,7 @@
                 <li><a href="https://drive.google.com/file/d/1vJPaQgBMRb5Nk0XUaxQJhmnOgIrrh0Rq/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pedir hemoderivados</a></li>
                 <li><a href="https://drive.google.com/file/d/1M-TNicf5qQ0nTLHohgykRDlPNIZAlBFt/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Calibrar bombas Mindray</a></li>
                 <li><a href="https://drive.google.com/file/d/1aKbTZqYVo3EJNAyURRn9T9g_By7InhR_/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Pasos a cumplimentar en caso de incidente</a></li>
+                <li><a href="https://docs.google.com/document/d/1re-LWRocnYjrEJXKYY6eslRvsTkTzvua?rtpof=true&usp=drive_fs" target="_blank"><img src="images/icons/word-icon.png" alt="WORD"> Reporte de Farmacovigilancia</a></li>
             </ul>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1rHyyYz1Ceotfd47ZuikEYOEjeMizu8Oq/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Equipamiento propio</button>
             <button onclick="openFile('https://drive.google.com/file/d/1U38nU0W1rJhKxsI2cYug_5eTxkgmovIf/view?usp=sharing')">Datos S.A.</button>
