cierre de bocas dolor y agregado de mail de bvalenti

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -738,8 +738,8 @@
                     <td class="droppable"><select id="consultorio-dolor-monday-short" disabled></select></td>
                     <td class="droppable"><select id="consultorio-dolor-tuesday-short" disabled></select></td>
                     <td class="droppable"><select id="consultorio-dolor-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="consultorio-dolor-thursday-short" enabled></select></td>
-                    <td class="droppable"><select id="consultorio-dolor-friday-short" enabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="consultorio-dolor-friday-short" disabled></select></td>
                 </tr>
             </tbody>
         </table> 
