exclusiones lharriague, saqué a valenti de asinación de guardias auto

--- a/frontend/shiftSchedule.html
+++ b/frontend/shiftSchedule.html
@@ -55,8 +55,9 @@
                     <li>2. Verifique las asignaciones de carga pública que se realizan por defecto</li>
                     <li>3. Cargue las guardias de carga pública</li>
                     <li>4. Seleccione "ND" - No disponible" en aquellas celdas que desee que no reciban asignación</li>
-                    <li>5. Oprima el botón asignar guardias</li>
-                    <li>6. Oprima el botón imprimir guardias (una vez oprimido podrá elegir si desea enviar mails a las clínicas o no)</li>
+                    <li>5. Realice la asignación de fin de semana a bvalenti</li>
+                    <li>6. Oprima el botón asignar guardias</li>
+                    <li>7. Oprima el botón imprimir guardias (una vez oprimido podrá elegir si desea enviar mails a las clínicas o no)</li>
                 </ol>
             </div>
         </div>
