--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -47,6 +47,8 @@
             <p><strong>Horario Viernes:</strong> <span id="workSchedule-friday"></span></p>
             <h3>Vacaciones Programadas:</h3>
             <ul id="vacation-list"></ul>
+            <h3>Otras Licencias:</h3>
+            <ul id="other-leaves-list"></ul>
             <button onclick="toggleChangePassword()" class="main-menu-button">Cambiar Contraseña</button>
         </div>
         <div class="change-password-form" id="change-password-form" style="display: none;">
