--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -146,6 +146,32 @@
             </div>
             <button type="button" id="add-vacation" class="main-menu-button">Agregar Vacaciones</button>
             <ul id="vacation-list"></ul>
+            <h3>Gestor de otras Licencias:</h3>
+            <div class="admin-input-group">
+                <label for="other-leave-start">Fecha de Inicio</label>
+                <input type="date" id="other-leave-start" name="other-leave-start" class="leave-start">
+            </div>
+            <div class="admin-input-group">
+                <label for="other-leave-end">Fecha de Fin</label>
+                <input type="date" id="other-leave-end" name="other-leave-end" class="leave-end">
+            </div>
+            <div class="admin-input-group">
+                <label for="other-leave-type">Concepto</label>
+                <select id="other-leave-type" name="other-leave-type">
+                    <option value="">Seleccione un concepto</option>
+                    <option value="Paternidad">Paternidad</option>
+                    <option value="Maternidad">Maternidad</option>
+                    <option value="Enfermedad">Enfermedad</option>
+                    <option value="Otro">Otro</option>
+                </select>
+            </div>
+            <div class="admin-input-group" id="other-leave-custom-type-group" style="display: none;">
+                <label for="other-leave-custom-type">Especifique</label>
+                <input type="text" id="other-leave-custom-type" name="other-leave-custom-type" placeholder="Ingrese motivo">
+            </div>
+            <button type="button" id="add-other-leave" class="main-menu-button">Agregar Licencia</button>
+            <ul id="other-leaves-list"></ul>
+
             <button type="submit" class="main-menu-button">Actualizar Usuario</button>
         </form>
     </main>
