Sección conteo total de guardias

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,7 @@
             <h3>Tus guardias para este mes son:</h3>
             <div id="shifts-assignments"></div>
             <a href="shiftInform.html"><button>Informe de guardias</button></a>
+            <a href="shiftCountInform.html"><button>Informe de acumulado de guardias</button></a>
             <a href="shiftSchedule.html"><button>Asistente de programación de guardias</button></a>
         </section>
         <section id="findeslargos" class="content-section">
