Sección conteo total de guardias responsive

--- a/frontend/shiftCountInform.html
+++ b/frontend/shiftCountInform.html
@@ -27,7 +27,7 @@
 
     <main class="container">
         <h3>Conteo acumulado de guardias</h3>
-        <table class="tabla-turnos">
+        <table class="responsive-table">
             <thead>
                 <tr>
                     <th>Usuario</th>
