Agregado de plottier vespertino y largo

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -670,6 +670,30 @@
                         <td class="droppable"><select id="hospital-plottier-friday-short" disabled></select></td>
                     </tr>
                     <tr>
+                        <td class="work-site">Hospital Plottier Matutino</td>
+                        <td class="droppable"><select id="hospital-plottier-monday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-tuesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-wednesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-thursday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-friday-short" disabled></select></td>
+                    </tr>
+                    <tr>
+                        <td class="work-site">Hospital Plottier Vespertino</td>
+                        <td class="droppable"><select id="hospital-plottier-monday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-tuesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-wednesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-thursday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-friday-short" disabled></select></td>
+                    </tr>
+                    <tr>
+                        <td class="work-site">Hospital Plottier Largo</td>
+                        <td class="droppable"><select id="hospital-plottier-monday-long" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-tuesday-long" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-wednesday-long" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-thursday-long" disabled></select></td>
+                        <td class="droppable"><select id="hospital-plottier-friday-long" disabled></select></td>
+                    </tr>
+                    <tr>
                         <td class="work-site">Hospital Centenario Matutino</td>
                         <td class="droppable"><select id="hospital-centenario-monday-short" disabled></select></td>
                         <td class="droppable"><select id="hospital-centenario-tuesday-short" disabled></select></td>
@@ -725,7 +749,7 @@
                         <td class="droppable"><select id="hospital-castro-rendon-thursday-long" disabled></select></td>
                         <td class="droppable"><select id="hospital-castro-rendon-friday-long" disabled></select></td>
                     </tr>
-                    <tr><td class="separator-thick" colspan="6"></td></tr>
+                    <!-- <tr><td class="separator-thick" colspan="6"></td></tr>
                     <tr>
                         <td class="work-site">Consultorio Dolor Matutino</td>
                         <td class="droppable"><select id="consultorio-dolor-monday-short" disabled></select></td>
@@ -741,7 +765,7 @@
                         <td class="droppable"><select id="consultorio-dolor-wednesday-short" disabled></select></td>
                         <td class="droppable"><select id="consultorio-dolor-thursday-short" enabled></select></td>
                         <td class="droppable"><select id="consultorio-dolor-friday-short" disabled></select></td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table> 
         </div>
