--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -668,6 +668,22 @@
                     <td class="droppable"><select id="hospital-plottier-thursday-short" disabled></select></td>
                     <td class="droppable"><select id="hospital-plottier-friday-short" disabled></select></td>
                 </tr>
+                                <tr>
+                    <td class="work-site">Hospital Plottier Vespertino</td>
+                    <td class="droppable"><select id="hospital-plottier-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-friday-short" disabled></select></td>
+                </tr>
+                                <tr>
+                    <td class="work-site">Hospital Plottier Largo</td>
+                    <td class="droppable"><select id="hospital-plottier-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="hospital-plottier-friday-long" disabled></select></td>
+                </tr>
                 <tr>
                     <td class="work-site">Hospital Centenario Matutino</td>
                     <td class="droppable"><select id="hospital-centenario-monday-short" disabled></select></td>
@@ -724,8 +740,8 @@
                     <td class="droppable"><select id="hospital-castro-rendon-thursday-long" enabled></select></td>
                     <td class="droppable"><select id="hospital-castro-rendon-friday-long" disabled></select></td>
                 </tr>
-                <tr><td class="separator-thick" colspan="6"></td></tr>
-                <tr>
+                <!-- <tr><td class="separator-thick" colspan="6"></td></tr> -->
+                <!-- <tr>
                     <td class="work-site">Consultorio Dolor Matutino</td>
                     <td class="droppable"><select id="consultorio-dolor-monday-short" disabled></select></td>
                     <td class="droppable"><select id="consultorio-dolor-tuesday-short" disabled></select></td>
@@ -740,7 +756,7 @@
                     <td class="droppable"><select id="consultorio-dolor-wednesday-short" disabled></select></td>
                     <td class="droppable"><select id="consultorio-dolor-thursday-short" disabled></select></td>
                     <td class="droppable"><select id="consultorio-dolor-friday-short" disabled></select></td>
-                </tr>
+                </tr> -->
             </tbody>
         </table> 
         </div>
