--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <script defer src="js/bundle.js"></script>
     <script src="js/spinner.js" defer></script>
     <script src="js/openfile.js" defer></script>
-    <script src="js/meetings.js" defer></script>
+    <script type="module" src="js/meetings.js" defer></script>
     <script src="js/payments.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="js/facturacion.js" defer></script>
