reconfig sitios de planta

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -622,7 +622,7 @@
                 </tr>
                 <tr>
                     <td class="work-site">Hospital Cipolletti Largo</td>
-                    <td class="droppable"><select id="hospital-cipolletti-monday-long" enabled></select></td>
+                    <td class="droppable"><select id="hospital-cipolletti-monday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-tuesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-wednesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-cipolletti-thursday-long" disabled></select></td>
@@ -633,7 +633,7 @@
                     <td class="droppable"><select id="hospital-allen-monday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-allen-tuesday-long"></select></td>
                     <td class="droppable"><select id="hospital-allen-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="hospital-allen-thursday-long" enabled></select></td>
+                    <td class="droppable"><select id="hospital-allen-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-allen-friday-long" disabled></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
