--- a/frontend/holidayAssistant.html
+++ b/frontend/holidayAssistant.html
@@ -41,6 +41,7 @@
         
         <h2>Asistente propiamente dicho</h2>
         <button id="assign-holidays" class="instructions-button">Asignar</button>
+        <button id="clear-assignments" class="instructions-button">Limpiar asignaciones</button>
         <button id="print-holidays" class="instructions-button">Imprimir</button>
         <table id="holiday-table" class="responsive-table">
             <thead>
