abm instituciones y abm sitios de trabajo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,8 @@
         <div class="dropdown-menu" id="dropdown-menu">
             <a href="profile.html">Mi perfil</a>
             <a href="admin.html" class="admin-only">Administrador de perfiles</a>
+            <a href="abm-institutions.html" class="admin-only">ABM Instituciones</a>
+            <a href="abm-work-sites.html" class="admin-only">ABM Bocas de Trabajo</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
         </div>
     </header>
