unificación de programación de plantas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,8 +71,7 @@
             <div id="user-assignments"></div>
             <a href="print-view.html"><button>Informe de plantas</button></a>
             <a href="coverageInform.html"><button>Informe de coberturas</button></a>
-            <a href="weekly-schedule.html"><button>Asistente de programación de plantas</button></a>
-            <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
+            <a href="weekly-schedule.html"><button>Programación de plantas</button></a>
             <a href="workSchemes.html"><button>Distribución de colores</button></a>
             <a href="solicitudCobertura.html"><button>Solicitud de coberturas</button></a>
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
