weekly scheduled individualized y print view fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     <script src="js/facturacion.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
-    <script src="js/weekly-schedule-individualized.js" defer></script>
+    <script type="module" src="js/weekly-schedule-individualized.js" defer></script>
     <script type="module" src="js/shiftScheduleIndividualized.js" defer></script>
     <script src="js/vacationInformIndividualized.js" defer></script>
     <script src="js/holidayInformIndividualized.js" defer></script>
