agregado de RNM a model, contoller y abm worksites

--- a/frontend/abm-work-sites.html
+++ b/frontend/abm-work-sites.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/login.css">
     <script defer src="js/bundle.js"></script>
     <script type="module" defer src="js/abm-work-sites.js"></script>
     <script defer src="js/spinner.js"></script>
@@ -117,6 +118,10 @@
                 <div class="admin-input-group">
                     <label for="new-pediatrics">Sitio de Pediatría</label>
                     <input type="checkbox" id="new-pediatrics" name="pediatrics">
+                </div>
+                <div class="admin-input-group">
+                    <label for="new-RNM">Sitio de RNM</label>
+                    <input type="checkbox" id="new-RNM" name="RNM">
                 </div>
 
                 <button type="submit" class="main-menu-button">Crear Boca de Trabajo</button>
@@ -242,6 +247,10 @@
                     <div class="admin-input-group">
                         <label for="edit-pediatrics">Sitio de Pediatría</label>
                         <input type="checkbox" id="edit-pediatrics" name="pediatrics">
+                    </div>
+                    <div class="admin-input-group">
+                        <label for="edit-RNM">Sitio de RNM</label>
+                        <input type="checkbox" id="edit-RNM" name="RNM">
                     </div>
 
                     <button type="submit" class="main-menu-button">Actualizar Boca de Trabajo</button>
